update README.md to add MinorGC and FullGC demo and descript